fix channel list z-indexing

--- a/frontend/src/components/ChannelsPage/ChannelNameHeader/ChannelNameHeader.css
+++ b/frontend/src/components/ChannelsPage/ChannelNameHeader/ChannelNameHeader.css
@@ -10,6 +10,7 @@
     position: relative;
     cursor: default;
     width: 100%;
+    z-index: inherit;
 }
 
 .channel-server-name {
